# django-bio-page

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
dashboard/: forms.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_rename_user_link_owner.py
dashboard/templates/dashboard/: home.html
django_bio_link/: asgi.py  settings.py  urls.py  wsgi.py
front/: urls.py  views.py
front/templates/front/: home.html
templates/: dashboard.html  sidebar.html  topbar.html
templates/registration/: login.html
