[tool.poetry]
name = "django_bio_link"
version = "0.1.0"
description = ""
authors = ["Sayyid Imaduddin <sayyidimaduddin99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
